# project-1

p1_and_p2_template/: CMakeCache.txt  CMakeLists.txt  README.md
p1_and_p2_template/mbot_lib/mbot_lib/: behaviors.cpp  behaviors.h  controllers.cpp  controllers.h  utils.cpp  utils.h
p1_and_p2_template/p1_wall_follower/: 1_drive_square.cpp  2_follow_1d.cpp  3_drive_star.cpp  4_follow_2d.cpp  5_wall_follower.cpp
p1_and_p2_template/p2_bug_navigation/: 1_super_mario.cpp  2_hit_the_spot.cpp  3_bug_navigation.cpp
p1_and_p2_template/p2_bug_navigation/super_mario/: run_super_mario.cpp  super_mario.h
p1_and_p2_template/test/: no_events.txt  seq01.txt  seq02.txt  seq03.txt  test_public.cpp  test_utils.h
